# projet-musique

./: .gitignore  BDDcommun.h  CMakeLists.txt  README.md  affichagecommun.cpp  affichagecommun.h  apimusicpro.cpp  apimusicpro.h  autorisationdiscogs.cpp  autorisationdiscogs.h  barreavancement.cpp  barreavancement.h  bddcommun.cpp  bddinterface.cpp  bddinterface.h  bddmp3.cpp  bddmp3.h  bddphys.cpp  bddphys.h  bddplaylist.cpp  bddplaylist.h  bddsingleton.cpp  bddsingleton.h  deezer.cpp  deezer.h  dialogajouterplaylistmp3.cpp  dialogajouterplaylistmp3.h  dialogajouterplaylistmp3.ui  dialogajoutplaylist.cpp  dialogajoutplaylist.h  dialogajoutplaylist.ui  dialogchangerpochette.cpp  dialogchangerpochette.ui  dialogdossierpardef.h  dialogmodifieralbum.ui  dialogueajouterphysique.cpp  dialogueajouterphysique.h  dialogueajouterphysique.ui  dialogueartistesinverses.cpp  dialogueartistesinverses.h  (+28 more)
kqoauth/lib/: kqoauth.prl  kqoauthd.prl
kqoauth/src/: kqoauthrequest.cpp  kqoauthrequest_xauth.h
projet-musique/: projet-musique.pro  projet-musique.pro.user.2.7pre1  style.astylerc
projet-musique/Bdd/: Bdd.pro  bdd.cpp  bdd.h  bdd_global.h  bddalbum.cpp  bddalbum.h  bddartiste.cpp  bddartiste.h  bddconfig.h  bdderreurs.cpp  bdderreurs.h  bddexporterhtml.cpp  bddexporterhtml.h  bddfusion.cpp  bddfusion.h  bddmp3.cpp  bddmp3.h  bddphys.cpp  bddphys.h  bddpoch.cpp  bddpoch.h  bddrech.cpp  bddrech.h  bddrelation.cpp  bddrelation.h  bddsauvegardebdd.cpp  bddsauvegardebdd.h  bddsingleton.cpp  bddsingleton.h  bddstats.cpp  bddstats.h  bddsupport.cpp  bddsupport.h  bddtitre.cpp  bddtitre.h  bddtype.cpp  bddtype.h  bddversion5.cpp  bddversion5.h  bddversion6.cpp  (+19 more)
projet-musique/Lecteur/: Lecteur.pro  dialogcontroles.cpp  dialogcontroles.h  dialogcontroles.ui  iconeslecteur.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowlecteur.cpp  mainwindowlecteur.h  mainwindowlecteur.ui  playermanager.cpp  playermanager.h  playermanager.ui
projet-musique/Lecteur/qss/: lecteur.qss
projet-musique/QAWSWrapper/: QAWSGlobalInfo.h  QAWSWrapper.cpp  QAWSWrapper.h  QAWSWrapper.pro  QAWSWrapperNotifier.h  README.md  util.h
projet-musique/core/: BDDcommun.h  DialogAjoutTitre.cpp  DialogAjoutTitre.h  DialogAjoutTitre.ui  DialogChoixAlbumPhys.cpp  DialogChoixAlbumPhys.h  DialogModifierAlbum.cpp  DialogModifierAlbum.h  DialogModifierAlbum.ui  DialogModifierArtiste.cpp  DialogModifierArtiste.h  DialogModifierArtiste.ui  DialogVidageBDD.cpp  DialogVidageBDD.h  IconesMenu.qrc  MyQLabel.cpp  MyQLabel.h  OngletStats.ui  affichagecommun.cpp  affichagecommun.h  barreavancement.cpp  barreavancement.h  barreavancement.ui  bddafficherartiste.cpp  bddafficherartiste.h  bddafficherliste.cpp  bddafficherliste.h  bddaffichermp3.cpp  bddaffichermp3.h  bddafficherphys.cpp  bddafficherphys.h  bddalbum.cpp  bddalbum.h  bddartiste.cpp  bddartiste.h  bddcommun.cpp  bddconfig.cpp  bddconfig.h  bddfusion.cpp  bddfusion.h  (+195 more)
projet-musique/core/qss/: default.qss
projet-musique/helpers/: handable.cpp  handable.h  handle_impl.h  helpers.cpp  helpers.pro  util.cpp  util.h
projet-musique/kqoauth/: kqoauth.pro  kqoauthmanager.cpp  kqoauthmanager.h  kqoauthutils.cpp  kqoauthutils.h
projet-musique/playercore/: playercore.cpp  playercore.h  playercore.pro  playercore_global.h
projet-musique/taglib/: fileref.h  taglib.pro
projet-musique/taglib/asf/: asfattribute.cpp
projet-musique/taglib/mpeg/: mpegheader.cpp
projet-musique/taglib/riff/: rifffile.cpp
projet-musique/taglib/riff/wav/: infotag.cpp
projet-musique/taglib/toolkit/: tzlib.cpp
src/: CMakeLists.txt  projet-musique.pro
src/Bdd/: Bdd.pro  bddartiste.h  bddconfig.h  bdderreurs.h  bddphys.cpp  bddrelation.cpp  bddsingleton.h  bddsupport.cpp  bddsupport.h  bddtitre.cpp  bddtype.h  changementversion.h  outilsbdd.cpp  outilsbdd.h  tags.cpp  tags.h
src/Lecteur/: dialogcontroles.cpp  iconeslecteur.qrc  mainwindowlecteur.cpp  mainwindowlecteur.ui  playermanager.cpp  playermanager.h
src/QAWSWrapper/: QAWSWrapper.cpp  QAWSWrapper.h  QAWSWrapper.pro  QAWSWrapperNotifier.cpp  QAWSWrapper_global.h
src/bdd/: CMakeLists.txt
src/core/: CMakeLists.txt  DialogAjoutTitre.ui  DialogChoixAlbumPhys.ui  DialogModifierArtiste.h  DialogModifierArtiste.ui  DialogVidageBDD.h  DialogVidageBDD.ui  bddafficherartiste.h  bddafficherliste.cpp  bddafficherliste.h  bddaffichermp3.cpp  bddaffichermp3.h  bddgestionphys.h  bddlecteur.cpp  dialogajouterphys.cpp  dialogajouterphys.h  dialogajouterphys.ui  dialogchoixpochette.cpp  dialogchoixpochette.h  dialogconfigactu.cpp  dialogconfigactu.h  dialogconfigactu.ui  dialogverifications.h  main.cpp  mainwindow.cpp  mainwindow.h  mp3remover.cpp  ongletartiste.cpp  ongleterreurs.cpp  ongleterreurs.h  ongleterreurs.ui  ongletmp3.h  ongletmp3.ui  ongletphys.h  ongletphys.ui  ongletrech.h  ongletrech.ui  ongletstats.cpp  ongletstats.h
src/discinfo/: CMakeLists.txt  Discogs.cpp  Discogs.h  README.md
src/discinfotests/: CMakeLists.txt  DiscogsTests.cpp
src/helpers/: CMakeLists.txt  handle.h  helpers.h  helpers_global.h  util.cpp
src/lecteur/: CMakeLists.txt
src/qawswrapper/: CMakeLists.txt
src/taglib/: fileref.cpp  fileref.h
taglib/inc/: Makefile  cmake_install.cmake  taglib.pro
taglib/inc/mpeg/id3v2/: id3v2framefactory.cpp
